# cloud_storage

./: CMakeLists.txt  README.md  dialogs.cpp  dialogs.h  extension.h  library.cpp  library.h  plugin_utils.cpp  plugin_utils.h  wfxplugin.h
service_clients/: dropbox_client.cpp  dropbox_client.h  dummy_client.cpp  dummy_client.h  googledrive_client.cpp  googledrive_client.h  httplib.h  onedrive_client.cpp  onedrive_client.h  service_client.cpp  service_client.h  service_factory.h  yandex_rest_client.cpp  yandex_rest_client.h
